--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.container-grid{
+.container-grid {
   display: flex;
   justify-content: space-between;
   width: 1200px;
   height: 100%;
   margin: auto;
   align-items: center;
-  
+
 }
 
 header {
@@ -22,7 +22,7 @@ header {
   height: 80px;
 }
 
-.menu a{
+.menu a {
   text-decoration: none;
   color: white;
   text-transform: uppercase;
@@ -30,20 +30,20 @@ header {
   font-size: 20px;
 }
 
-.menu{
+.menu {
   width: 660px;
   display: flex;
   justify-content: space-between;
 }
 
-.banner{
+.banner {
   background-image: url(../img/banner.png);
   height: 600px;
   background-repeat: none;
   background-size: cover;
 }
 
-.texto-banner{
+.texto-banner {
   width: 495px;
   color: white;
   text-align: center;
@@ -51,13 +51,13 @@ header {
   font-size: 25px;
 }
 
-.texto-banner h1{
- font-family: Arial, Helvetica, sans-serif;
- font-size: 70px;
- font-weight: bold;
+.texto-banner h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 70px;
+  font-weight: bold;
 }
 
-.texto-banner a{
+.texto-banner a {
   background-color: #C31616;
   text-decoration: none;
   color: white;
@@ -65,69 +65,298 @@ header {
   padding: 15px;
   border-radius: 5px;
 }
-.texto-banner p{
+
+.texto-banner p {
   margin-bottom: 50px;
 }
 
-.posicao-texto{
+.posicao-texto {
   justify-content: flex-end;
 }
 
-.secao-jogos{
+.secao-jogos {
   background-color: black;
 }
 
-.jogos{
+.jogos {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.jogos img{
+.jogos img {
   width: 150px;
 }
 
-.secao-sobre{
+.secao-sobre {
   background-image: url(../img/Fundo.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.texto-sobre{
+.texto-sobre {
   color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.barras{
-  width:30px;
+.barras {
+  width: 30px;
   display: none;
 }
 
-@media screen and (max-width: 1200px){
-  .container-grid{
+.secao-partidas {
+  background-color: black;
+  height: 90px;
+}
+
+.partidas {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+
+.games-aovivo {
+  width: 300px;
+}
+
+.games-embreve {
+  width: 550px;
+}
+
+.games-aovivo,
+.games-embreve {
+  display: flex;
+  color: #fff;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.partidas h2 {
+  text-transform: uppercase;
+  font-size: 25px;
+}
+
+.partida {
+  width: 160px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.partida p {
+  margin-bottom: 0;
+}
+
+.time1,
+.time2 {
+  display: flex;
+  align-items: center;
+}
+
+.partida img {
+  width: 28px;
+}
+
+.time1 img {
+  margin-left: 8px;
+}
+
+.time2 img {
+  margin-right: 8px;
+}
+
+.secao-noticias {
+  background-color: #1E1C21;
+  padding: 30px 0;
+}
+
+.secao-noticias .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.bloco-noticias {
+  width: 70%;
+  height: 90%;
+  color: white;
+}
+
+.bloco-noticias h2 {
+  font-size: 25px;
+}
+
+.content-news {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 25px;
+}
+
+.cardnews {
+  width: 240px;
+  height: 360px;
+  color: #fff;
+  margin-bottom: 32px;
+  background: var(--gradient);
+  box-shadow: 0px 0px 10px green, 0px 0px 30px blue;
+}
+
+.cardnews h3 {
+  padding-left: 20px;
+  padding-top: 5px;
+  font-size: 24px;
+}
+
+.cardnews p {
+  padding-left: 20px;
+  font-size: 16px;
+}
+
+.next-games {
+  width: 25%;
+}
+
+.next-games h2 {
+  font-size: 25px;
+  color: white;
+  margin-bottom: 25px;
+}
+
+.next-games-bg {
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 2em 0;
+  background: var(--gradient);
+  box-shadow: 0px 0px 10px rgb(0, 0, 0), 0px 0px 30px rgb(0, 0, 0);
+}
+
+.next-games-match {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: 700;
+  color: #fff;
+}
+
+.teams {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.next-games-match img {
+  max-width: 40px;
+}
+
+.next-games-match p {
+  max-width: 16px;
+}
+
+.next-games-match div {
+  display: flex;
+  align-items: center;
+}
+
+footer {
+  background-color: black;
+}
+
+.rodape {
+  padding: 16px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.links {
+  color: white;
+}
+
+.links h2 {
+  font-size: 24px;
+}
+
+.links a {
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.links-footer {
+  display: flex;
+  justify-content: space-between;
+  width: 400px;
+}
+
+.logo-rodape {
+  width: 300px;
+}
+
+.sociais h2 {
+  color: white;
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+
+.sociais form {
+  display: flex;
+  margin-bottom: 8px;
+}
+
+.sociais input[type="email"]::placeholder {
+  color: #B8B3b3;
+  font-weight: bold;
+}
+
+.botao-cadastrar {
+  width: 156px;
+  color: white;
+  background-color: #8326EF;
+  justify-content: space-between;
+  margin-top: 0.8em;
+}
+
+.siga-nos {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 0.8em;
+}
+
+
+
+@media screen and (max-width: 1200px) {
+  .container-grid {
     width: 90%;
   }
-  .menu a{
+
+  .menu a {
     font-size: 16px;
   }
-  .logo{
+
+  .logo {
     width: 200px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  h1{
-    color:blue;
+  h1 {
+    color: blue;
   }
 
-  .barras{
+  .barras {
     display: inline-block;
   }
 
-  .menu{
+  .menu {
     display: none;
     flex-direction: column;
     width: 200px;
@@ -138,12 +367,12 @@ header {
     background-color: black;
   }
 
-  .menu a{
+  .menu a {
     text-align: center;
     padding: 15px;
   }
 
-  .posicionamento-header{
+  .posicionamento-header {
     position: relative;
   }
 }
